bynkc/tests/fixtures/negative/368_duplicate_type_param/input.bynk
commons bad

type Pair[T, T] = { a: T, b: T }
